force-app/main/default/objects/Course_Attendance__c/Course_Attendance__c.object-meta.xml
<CustomObject>
    <label>Course Attendance</label>
    <nameField>
        <displayFormat>CA-{000000}</displayFormat>
        <label>Course Attendance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Attendances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>