force-app/main/default/objects/Course_Attendance__c/fields/Amount_to_invoice__c.field-meta.xml
<CustomField>
    <fullName>Amount_to_invoice__c</fullName>
    <description>Amount to invoice this student for this course</description>
    <inlineHelpText>Please fill either Amount to invoice or Course Opportunity before confirming this Course Attendance.</inlineHelpText>
    <label>Amount to invoice</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>