force-app/main/default/objects/Course_Attendance__c/fields/Attendant__c.field-meta.xml
<CustomField>
    <fullName>Attendant__c</fullName>
    <label>Attendant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Course Attendances</relationshipLabel>
    <relationshipName>Course_Attendances</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>