force-app/main/default/objects/Course_Attendance__c/fields/Attendant_Company__c.field-meta.xml
<CustomField>
    <fullName>Attendant_Company__c</fullName>
    <formula>Attendant__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendant Company</label>
    <type>Text</type>
</CustomField>