force-app/main/default/objects/Course_Attendance__c/fields/Attendant_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Attendant_First_Name__c</fullName>
    <formula>Attendant__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendant First Name</label>
    <type>Text</type>
</CustomField>