force-app/main/default/objects/Course_Attendance__c/fields/Attendant_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Attendant_Last_Name__c</fullName>
    <formula>Attendant__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendant Last Name</label>
    <type>Text</type>
</CustomField>