force-app/main/default/objects/Course_Attendance__c/fields/Course_Ending_Date__c.field-meta.xml
<CustomField>
    <fullName>Course_Ending_Date__c</fullName>
    <formula>Course__r.Ending_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Ending Date</label>
    <type>Date</type>
</CustomField>