force-app/main/default/objects/Course_Attendance__c/fields/Course_Instructor_Email__c.field-meta.xml
<CustomField>
    <fullName>Course_Instructor_Email__c</fullName>
    <formula>Course__r.Instructor__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Instructor Email</label>
    <type>Text</type>
</CustomField>