force-app/main/default/objects/Course_Attendance__c/fields/Course_Instructor_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Course_Instructor_Mobile__c</fullName>
    <formula>Course__r.Instructor__r.MobilePhone</formula>
    <label>Course Instructor Mobile</label>
    <type>Text</type>
</CustomField>