force-app/main/default/objects/Course_Attendance__c/fields/Course_Instructor_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Instructor_Name__c</fullName>
    <formula>Course__r.Instructor__r.FirstName + &quot; &quot; + Course__r.Instructor__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Instructor Name</label>
    <type>Text</type>
</CustomField>