force-app/main/default/objects/Course_Attendance__c/fields/Course_Location__c.field-meta.xml
<CustomField>
    <fullName>Course_Location__c</fullName>
    <formula>TEXT( Course__r.Location__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Location</label>
    <type>Text</type>
</CustomField>