force-app/main/default/objects/Course_Attendance__c/fields/Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Name__c</fullName>
    <formula>TEXT(Course__r.Course_Subject__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Name</label>
    <type>Text</type>
</CustomField>