force-app/main/default/objects/Course_Attendance__c/fields/Course_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Course_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the opportunity that includes this course attendance.</inlineHelpText>
    <label>Course Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Course Attendances</relationshipLabel>
    <relationshipName>Course_Attendances</relationshipName>
    <type>Lookup</type>
</CustomField>