force-app/main/default/objects/Course_Attendance__c/fields/Course_survey_url__c.field-meta.xml
<CustomField>
    <fullName>Course_survey_url__c</fullName>
    <formula>IF(ISBLANK(Course__r.Course_Product__r.Course_Survey_url__c) || ISNULL(Course__r.Course_Product__r.Course_Survey_url__c),&apos;https://docs.google.com/forms/d/e/1FAIpQLScVM3Qp1VFuVWGVSFuLE27_vc7PCXys_EENhtPF9BIR7v6_sA/viewform&apos;,Course__r.Course_Product__r.Course_Survey_url__c)</formula>
    <label>Course survey URL</label>
    <type>Text</type>
</CustomField>