force-app/main/default/objects/Course_Attendance__c/fields/Custom_Ref_Contact__c.field-meta.xml
<CustomField>
    <fullName>Custom_Ref_Contact__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; + Attendant__r.Id + &apos;&apos; ,  Attendant__r.FirstName + &apos; &apos; + Attendant__r.LastName + &apos; &apos; + Attendant__r.Suffix + &apos; (&apos; + Attendant__r.Account.Name + &apos;)&apos;) + &apos; - &apos; + HYPERLINK(&apos;/&apos; + Id, &apos;VIEW&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name and Company</label>
    <type>Text</type>
</CustomField>