force-app/main/default/objects/Course_Attendance__c/fields/Diploma_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Diploma_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Diploma Email Sent</label>
    <type>Checkbox</type>
</CustomField>