force-app/main/default/objects/Course_Attendance__c/fields/Documentation_Sent__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This check indicate if documentation has been sent.</description>
    <label>Documentation Sent</label>
    <type>Checkbox</type>
</CustomField>