force-app/main/default/objects/Course_Attendance__c/fields/Exam_Sent__c.field-meta.xml
<CustomField>
    <fullName>Exam_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check para indica si se ha enviado los examen tipo</description>
    <label>Exam Sent</label>
    <type>Checkbox</type>
</CustomField>