force-app/main/default/objects/Course_Attendance__c/fields/FUNDAE_Student__c.field-meta.xml
<CustomField>
    <fullName>FUNDAE_Student__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FUNDAE Student</label>
    <type>Checkbox</type>
</CustomField>