force-app/main/default/objects/Course_Attendance__c/fields/Invoice_Sent__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to manage if the course has been invoiced to each student.</description>
    <inlineHelpText>Check when the Invoice of this course has been sent to this student.</inlineHelpText>
    <label>Invoice Sent</label>
    <type>Checkbox</type>
</CustomField>