force-app/main/default/objects/Course_Attendance__c/fields/Logistic_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Logistic_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Logistic Sent</label>
    <type>Checkbox</type>
</CustomField>