force-app/main/default/objects/Course_Attendance__c/fields/Remotely__c.field-meta.xml
<CustomField>
    <fullName>Remotely__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Marca si asiste en remoto al curso</inlineHelpText>
    <label>Remotely</label>
    <type>Checkbox</type>
</CustomField>