force-app/main/default/objects/Course_Attendance__c/fields/SendEmailError__c.field-meta.xml
<CustomField>
    <fullName>SendEmailError__c</fullName>
    <description>Description of error when sending documentation or exams</description>
    <label>Send Email Error</label>
    <type>TextArea</type>
</CustomField>