force-app/main/default/objects/Course_Attendance__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Waiting for Confirmation</fullName>
            </value>
            <value>
                <fullName>Confirmed, waiting for course</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
                <isActive>false</isActive>
                <label>Paid</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>