force-app/main/default/objects/Course_Attendance__c/fields/Voucher_bought__c.field-meta.xml
<CustomField>
    <fullName>Voucher_bought__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to know if the attendant has the right to be sent the cert voucher or not.</description>
    <inlineHelpText>Mark if this attendant has acquired vouchers with the training.</inlineHelpText>
    <label>Voucher bought</label>
    <type>Checkbox</type>
</CustomField>