force-app/main/default/objects/Course_Attendance__c/validationRules/Course_needs_to_be_confirmed_first.validationRule-meta.xml
<ValidationRule>
    <fullName>Course_needs_to_be_confirmed_first</fullName>
    <active>true</active>
    <description>No puedes confirmar un course attendance si el curso no está confirmado.</description>
    <errorConditionFormula>ISPICKVAL( Status__c , &quot;Confirmed&quot;) &amp;&amp;
ISPICKVAL(  Course__r.Status__c  , &quot;Open&quot;)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>You can&apos;t confirm an attendance if course is not yet confirmed.</errorMessage>
</ValidationRule>