force-app/main/default/objects/Course_Attendance__c/validationRules/Covid19.validationRule-meta.xml
<ValidationRule>
    <fullName>Covid19</fullName>
    <active>false</active>
    <errorConditionFormula>Remotely__c = false &amp;&amp; ISPICKVAL(Status__c,&apos;Confirmed&apos;)</errorConditionFormula>
    <errorDisplayField>Remotely__c</errorDisplayField>
    <errorMessage>Only remote assistants are currently allowed</errorMessage>
</ValidationRule>