force-app/main/default/objects/Course_Attendance__c/validationRules/Not_Amount_to_invoice_if_no_description.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_Amount_to_invoice_if_no_description</fullName>
    <active>false</active>
    <errorConditionFormula>Amount_to_invoice__c = 0 &amp;&amp; ISBLANK(Description__c)</errorConditionFormula>
    <errorDisplayField>Amount_to_invoice__c</errorDisplayField>
    <errorMessage>You can&apos;t indicate 0 in Amount To Invoice if Description is blank</errorMessage>
</ValidationRule>