force-app/main/default/objects/Course_Attendance__c/validationRules/Not_confirmed_if_no_invoice_info.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_confirmed_if_no_invoice_info</fullName>
    <active>true</active>
    <errorConditionFormula>(ISBLANK(  Amount_to_invoice__c  )  &amp;&amp;  ISBLANK(   Course_Opportunity__c )  )
 &amp;&amp; 
 ISPICKVAL( Status__c , &quot;Confirmed&quot;)</errorConditionFormula>
    <errorDisplayField>Amount_to_invoice__c</errorDisplayField>
    <errorMessage>You need to include invoice information to confirm an attendance</errorMessage>
</ValidationRule>