force-app/main/default/objects/Course_Attendance__c/validationRules/Not_Remotely_attendant_without_WebExLink.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_Remotely_attendant_without_WebExLink</fullName>
    <active>true</active>
    <errorConditionFormula>Remotely__c &amp;&amp;  ISBLANK(Course__r.Webex__c) &amp;&amp;   ISPICKVAL(Status__c, &quot;Confirmed&quot;)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>You can&apos;t confirm an attendance if Course WebEx Link is blank.</errorMessage>
</ValidationRule>