force-app/main/default/objects/Course_Attendance__c/listViews/Course_Attendance_from_Course.listView-meta.xml
<ListView>
    <fullName>Course_Attendance_from_Course</fullName>
    <columns>NAME</columns>
    <columns>Attendant__c</columns>
    <columns>Course__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Course__c</field>
        <operation>equals</operation>
        <value>BCA - CC - ENE24</value>
    </filters>
    <label>Course Attendance from Course</label>
</ListView>