force-app/main/default/objects/Course_Attendance__c/listViews/Course_Attendances.listView-meta.xml
<ListView>
    <fullName>Course_Attendances</fullName>
    <columns>NAME</columns>
    <columns>Course__c</columns>
    <columns>Course_Start_Date__c</columns>
    <columns>Attendant__c</columns>
    <columns>Attendant_Company__c</columns>
    <columns>Status__c</columns>
    <columns>Invoice_Sent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Attendant_Company__c</field>
        <operation>contains</operation>
        <value>Nubika</value>
    </filters>
    <label>Course Attendances</label>
</ListView>