force-app/main/default/objects/Course_Attendance__c/listViews/Not_Invoiced_Course_Attendances.listView-meta.xml
<ListView>
    <fullName>Not_Invoiced_Course_Attendances</fullName>
    <columns>Course__c</columns>
    <columns>NAME</columns>
    <columns>Attendant__c</columns>
    <columns>Attendant_Company__c</columns>
    <columns>Invoice_Sent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Invoice_Sent__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Not Invoiced Course Attendances</label>
</ListView>